# src/main/java/ru/skydiver/backend/skydiver/model/CartProductEntity.java
@@ -1,0 +1,6 @@
+package ru.skydiver.backend.skydiver.model;
+
+public record CartProductEntity(String userId, int productId, int amount, String productName, String imageUrl,
+                                int price) {
+
+}
